devPackages/fieldSetForm/objects/Application_Display_Field_Logic__c.object
<CustomObject>
    <fields>
        <fullName>ControllingField_API__c</fullName>
        <label>ControllingField API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControllingField_Object__c</fullName>
        <label>ControllingField_Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControllingField_Value__c</fullName>
        <label>ControllingField_Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Controlling_Field_Match_Type__c</fullName>
        <label>Controlling Field Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controlling_Field_Type__c</fullName>
        <label>Controlling Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text/Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DependentField_API__c</fullName>
        <label>DependentField_API</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Application Display Field Logic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ControllingField_Object__c</columns>
        <columns>ControllingField_API__c</columns>
        <columns>ControllingField_Value__c</columns>
        <columns>DependentField_API__c</columns>
        <columns>Controlling_Field_Type__c</columns>
        <columns>Controlling_Field_Match_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Display_Logic</fullName>
        <columns>NAME</columns>
        <columns>ControllingField_Object__c</columns>
        <columns>ControllingField_Value__c</columns>
        <columns>ControllingField_API__c</columns>
        <columns>Controlling_Field_Match_Type__c</columns>
        <columns>Controlling_Field_Type__c</columns>
        <columns>DependentField_API__c</columns>
        <filterScope>Everything</filterScope>
        <label>Display Logic</label>
    </listViews>
    <nameField>
        <displayFormat>DFL-{000000}</displayFormat>
        <label>Application Display Field Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Display Field Logic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>